--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -7,7 +7,7 @@ output:
 
 
 ## Loading and preprocessing the data
-```{r}
+```{r,echo = TRUE}
 setwd("C:\\Users\\SZXP0196\\Desktop\\Rdata")
 activity<-read.csv("activity.csv",header=TRUE,sep=",")
 ```
@@ -15,7 +15,7 @@ activity<-read.csv("activity.csv",header=TRUE,sep=",")
 ``
 
 ## What is mean total number of steps taken per day?
-```{r}
+```{r,echo = TRUE}
 # make a histogram of the total number of steps taken each day
 daysum<-aggregate(.~date,data=activity,sum,na.rm=TRUE)
 hist(daysum$steps,main = "Histogram of Total Steps Taken Each Day", xlab = "Steps")
@@ -27,7 +27,7 @@ stepmedian<-median(daysum$steps)
 
 
 ## What is the average daily activity pattern?
-```{r}
+```{r,echo = TRUE}
 #Make a time series plot (i.e. type = "l") of the 5-minute interval (x-axis) and the average number of steps taken, averaged across all days (y-axis)
 intervalview<-aggregate(steps~interval,data=activity,sum)
 plot(intervalview$interval,intervalview$steps,type="l",main="")
@@ -38,7 +38,7 @@ maxInt <- intervalview$interval[which.max(intervalview$steps)]
 
 
 ## Imputing missing values
-```{r}
+```{r,echo = TRUE}
 #Calculate and report the total number of missing values in the dataset (i.e. the total number of rows with NAs)
 rowNAs <- is.na(rowSums(activity[ ,c(1,3)]))
 numNAs <- sum(rowNAs)
@@ -59,7 +59,7 @@ stepmedian2 = median(daysum2$steps)
 
 
 ## Are there differences in activity patterns between weekdays and weekends?
-```{r}
+```{r,echo = TRUE}
 #Create a new factor variable in the dataset with two levels -- "weekday" and "weekend" indicating whether a given date is a weekday or weekend day.
 revact$date <- as.Date(revact$date)
 revact <- cbind(revact, (weekdays(revact$date) == "Sunday" | weekdays(revact$date) == "Saturday"))
